--- a/.github/workflows/deploy.yaml
+++ b/.github/workflows/deploy.yaml
@@ -1,15 +1,15 @@
-name: "Deploy to Production"
+# name: "Deploy to Production"
 
-on:
-  push:
-    branches: [main]
+# on:
+#   push:
+#     branches: [main]
 
-jobs:
-  deploy-github-actions:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v4
-      - run: echo "Hacemos pull del codigo"
-      - run: echo "Correr migraciones"
-      - run: echo "Generar binarios"
-      - run: echo "publicar version"
+# jobs:
+#   deploy-github-actions:
+#     runs-on: ubuntu-latest
+#     steps:
+#       - uses: actions/checkout@v4
+#       - run: echo "Hacemos pull del codigo"
+#       - run: echo "Correr migraciones"
+#       - run: echo "Generar binarios"
+#       - run: echo "publicar version"
