--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,10 +1,10 @@
-name> Deploy to server
+name: Deploy to server
 
 on: push
 
 jobs:
   first_jobs:
     runs-on: ubuntu-latest
-    steps: 
-    -name: Hola mundo
-      run: echo "Hola mundo"
+    steps:
+      - name: Hola mundo
+        run: echo "Hola mundo"
