--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,3 +8,9 @@ jobs:
     steps:
       - name: Hola mundo
         run: echo "Hola mundo"
+
+  second_jobs:
+    runs-on: ubuntu-latest
+    steps:
+      - name: Hola mundo
+        run: echo "Hola mundo 2"
