--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,7 @@ jobs:
         run: echo "Hola mundo"
 
   second_jobs:
+    needs: first_jobs
     runs-on: ubuntu-latest
     steps:
       - name: Hola mundo
